// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text when not required renders the expected component with an optional tag 1`] = `
<div>
  <div
    class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
    data-garden-id="textfields.text_group"
    data-garden-version="3.7.0"
  >
    <label
      class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
      data-garden-id="textfields.label"
      data-garden-version="3.7.0"
      for="garden-text-field-2--input"
      id="garden-text-field-2--label"
    >
      <strong>
        this is a label
      </strong>
       (optional)
    </label>
    <div
      class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
      data-garden-id="textfields.hint"
      data-garden-version="3.7.0"
      id="garden-text-field-2--hint"
    >
      description of field
    </div>
    <input
      aria-describedby="garden-text-field-2--hint"
      aria-invalid="false"
      aria-labelledby="garden-text-field-2--label"
      class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
      data-garden-id="textfields.input"
      data-garden-version="3.7.0"
      id="garden-text-field-2--input"
      label="this is a label"
      name="text"
    />
  </div>
</div>
`;

exports[`Text when required renders the expected component 1`] = `
<div>
  <div
    class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
    data-garden-id="textfields.text_group"
    data-garden-version="3.7.0"
  >
    <label
      class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
      data-garden-id="textfields.label"
      data-garden-version="3.7.0"
      for="garden-text-field-0--input"
      id="garden-text-field-0--label"
    >
      <strong>
        this is a label
      </strong>
    </label>
    <div
      class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
      data-garden-id="textfields.hint"
      data-garden-version="3.7.0"
      id="garden-text-field-0--hint"
    >
      description of field
    </div>
    <input
      aria-describedby="garden-text-field-0--hint"
      aria-invalid="false"
      aria-labelledby="garden-text-field-0--label"
      class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl kdlara"
      data-garden-id="textfields.input"
      data-garden-version="3.7.0"
      id="garden-text-field-0--input"
      label="this is a label"
      name="text"
      required=""
    />
  </div>
</div>
`;

exports[`Text when showing error renders the expected component with an error message 1`] = `
<div>
  <div
    class="TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
    data-garden-id="textfields.text_group"
    data-garden-version="3.7.0"
  >
    <label
      class="Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
      data-garden-id="textfields.label"
      data-garden-version="3.7.0"
      for="garden-text-field-4--input"
      id="garden-text-field-4--label"
    >
      <strong>
        this is a label
      </strong>
    </label>
    <div
      class="Hint-sc-1pcaoos-0 text__c-txt__hint___2Tn9V RvEHv"
      data-garden-id="textfields.hint"
      data-garden-version="3.7.0"
      id="garden-text-field-4--hint"
    >
      description of field
    </div>
    <input
      aria-describedby="garden-text-field-4--hint"
      aria-invalid="true"
      aria-labelledby="garden-text-field-4--label"
      class="Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--error___15FsA kdlara"
      data-garden-id="textfields.input"
      data-garden-version="3.7.0"
      id="garden-text-field-4--input"
      label="this is a label"
      name="text"
      required=""
    />
    <div
      class="Message-zhe3tc-0 text__c-txt__message___J_8FM text__c-txt__message--error___1aGWx hYokOG"
      data-garden-id="textfields.message"
      data-garden-version="3.7.0"
    />
  </div>
</div>
`;
